# OCTA-autosegmentation

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  ROI_cropping.py  example_custom_vessel_simulation.ipynb  example_train_gan-seg_with_new_dataset.ipynb  generate_vessel_graph.py  pyproject.toml  requirements.txt  skgan.ipynb  test.py  train.py  validate.py  visualize_vessel_graphs.py
.github/ISSUE_TEMPLATE/: bug_report.md
configs/: README.md  config_3d_reconstruction.yml  config_frangi.yml  config_gan_ves_seg.yml  config_oof.yml  config_template.yml  config_ves_seg-S.yml  config_ves_seg-S_AA.yml  config_ves_seg-S_GAN.yml  config_ves_seg-S_RA.yml  config_ves_seg_S_Menten.yml  config_ves_seg_supervised.yml  schedule_experiments.sh
data/: data_transforms.py  image_dataset.py  unalignedZipDataset.py
datasets/: README.md  visualize_synth_csv.py  visualize_vessel_graphs.py
docker/: dockershell.sh  vessel_graph_gen_docker_config.yml
models/: base_model_abc.py  cut.py  cycle_gan.py  dclgan.py  frangi.py  gan_seg_model.py  lambda_model.py  model.py  model_interface_abc.py  negcut.py  networks.py  nice_gan.py  noise_model.py  oof.py  skrgan.py
utils/: bayesOpt.py  bayesOpt_noise.py  bayesOpt_skrgan.py  cldice.py  config_overrides.py  decorators.py  enums.py  losses.py  metrics.py  spinner.py  train_gan_seg.py  train_ves_seg.py  visualizer.py
vessel_graph_generation/: README.md  arterial_tree.py  element_mesh.py  forest.py  greenhouse.py  requirements.txt  simulation_space.py  tree2img.py  utilities.py
(+559 files in other folders)
